loki/healthendpoint/ups-lab-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: ups-lab-nginx
  name: ups-lab-nginx
  namespace: he
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: ups-lab-nginx
